wacom: don't unref GdkDevices when we don't own a reference

Commit 9e17dced137ff2fd05ed97c82e90a7725e9f82d7 added a bunch of unrefs
which always unref the gdk_device after a g_object_get ("gdk-device").
That is wrong -- getting a property doesn't increase a refcount.

This causes the GdkDevices to be freed too early causing all sorts of
crashes due to use-after-free() conditions:

https://bugzilla.redhat.com/show_bug.cgi?id=1194037
https://bugzilla.gnome.org/show_bug.cgi?id=746866